# yandex_task

./: README.md  generate_pairwise_test_data.py  main.py  pyproject.toml
Questions/: 1_answers.md  2_answers.md
delivery/: __init__.py  calculate_price.py  exceptions.py
tests/: test_calculate_price.py  test_get_distance_added_value.py  test_get_fregile_added_value.py  test_get_occupation_multiplier.py  test_get_size_added_values.py  test_validate_data.py
